# llm-schema-registry

./: .dockerignore  .env.example  .gitignore  ANALYTICS-ENGINE-DELIVERY-REPORT.md  Cargo.toml  Dockerfile  INTEGRATION-TESTS-DELIVERY-REPORT.md  LINEAGE-TRACKING-DELIVERY-REPORT.md  MIGRATION-LINEAGE-DELIVERY-REPORT.md  Makefile  README.md  SDK-DELIVERY-REPORT.md  SOC2-COMPLIANCE-DELIVERY-REPORT.md  SWARM-DELIVERY-REPORT.md  docker-compose.yml  package-lock.json  package.json  tarpaulin.toml
benches/: cache_operations.rs  database_operations.rs  schema_operations.rs
crates/compatibility-checker/: Cargo.toml  IMPLEMENTATION_REPORT.md  README.md
crates/compatibility-checker/benches/: compatibility_benchmarks.rs
crates/compatibility-checker/src/: cache.rs  checker.rs  dependency.rs  lib.rs  types.rs  violation.rs
crates/compatibility-checker/src/formats/: avro.rs  json_schema.rs  mod.rs  protobuf.rs
crates/compatibility-checker/tests/: integration_tests.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  schema.rs  types.rs
crates/llm-integrations/: Cargo.toml
crates/llm-integrations/src/: lib.rs
crates/llm-integrations/src/events/: bus.rs  kafka.rs  mod.rs  rabbitmq.rs  types.rs
crates/llm-integrations/src/modules/: evaluation.rs  mod.rs  model_serving.rs  prompt_management.rs  rag_pipeline.rs  training_pipeline.rs
crates/llm-integrations/src/webhooks/: dispatcher.rs  mod.rs
crates/llm-schema-api/: Cargo.toml  README.md
crates/llm-schema-api/src/: grpc.rs  health.rs  rest.rs  validation.rs
crates/llm-schema-api/src/auth/: api_key.rs  mod.rs  rbac.rs
crates/llm-schema-api/src/models/: errors.rs  responses.rs
crates/schema-registry-analytics/: Cargo.toml  README.md
crates/schema-registry-analytics/src/: aggregator.rs  engine.rs  error.rs  event_bus.rs  lib.rs  query.rs  reports.rs  storage.rs  types.rs
crates/schema-registry-analytics/src/tests/: integration_tests.rs  mod.rs
crates/schema-registry-api/: Cargo.toml  build.rs
crates/schema-registry-api/src/: lib.rs
crates/schema-registry-api/src/auth/: jwt.rs  middleware.rs  oauth.rs
crates/schema-registry-api/src/middleware/: mod.rs
crates/schema-registry-api/src/models/: mod.rs  requests.rs
crates/schema-registry-cli/: Cargo.toml
crates/schema-registry-cli/src/: config.rs  error.rs  main.rs  output.rs
crates/schema-registry-cli/src/commands/: admin.rs  analytics.rs  lineage.rs  migration.rs  mod.rs  schema.rs
crates/schema-registry-compatibility/: Cargo.toml
crates/schema-registry-compatibility/src/: lib.rs
crates/schema-registry-core/: Cargo.toml
crates/schema-registry-core/src/: config_manager_adapter.rs  error.rs  events.rs  lib.rs  schema.rs  startup.rs  state.rs  traits.rs  types.rs  versioning.rs
crates/schema-registry-lineage/: Cargo.toml
crates/schema-registry-lineage/src/: algorithms.rs  engine.rs  error.rs  export.rs  graph_store.rs  impact.rs  lib.rs  tracker.rs  types.rs
crates/schema-registry-migration/: Cargo.toml
crates/schema-registry-migration/src/: analyzer.rs  engine.rs  error.rs  lib.rs  types.rs  validator.rs
crates/schema-registry-migration/src/generators/: go.rs  java.rs  mod.rs  python.rs  sql.rs  typescript.rs
crates/schema-registry-observability/: Cargo.toml
crates/schema-registry-observability/src/: lib.rs  logging.rs  metrics.rs  middleware.rs  tracing_setup.rs
crates/schema-registry-security/: Cargo.toml  SOC2_USAGE_GUIDE.md
crates/schema-registry-security/src/: abac.rs  audit.rs  auth.rs  lib.rs  rbac.rs  secrets.rs  soc2.rs
crates/schema-registry-security/src/soc2/: controls.rs  evidence.rs  monitoring.rs  reporting.rs  testing.rs
crates/schema-registry-server/: Cargo.toml  README.md
crates/schema-registry-server/src/: backup.rs  config.rs  main.rs  shutdown.rs
crates/schema-registry-server/src/middleware/: rate_limiter.rs
crates/schema-registry-storage/: Cargo.toml
crates/schema-registry-storage/src/: cache_warmer.rs  lib.rs  postgres.rs  redis_cache.rs  s3.rs
crates/schema-registry-validation/: Cargo.toml  IMPLEMENTATION_REPORT.md  README.md  VALIDATION_ENGINE_SUMMARY.txt
crates/schema-registry-validation/benches/: validation_benchmarks.rs
crates/schema-registry-validation/examples/: basic_validation.rs.disabled  custom_rules.rs.disabled
crates/schema-registry-validation/src/: engine.rs  format_detection.rs  lib.rs  types.rs
crates/schema-registry-validation/src/validators/: avro.rs  json_schema.rs  mod.rs  protobuf.rs
crates/storage/: Cargo.toml  README.md
crates/storage/benches/: storage_benchmarks.rs
crates/storage/examples/: basic_usage.rs
crates/storage/migrations/: 20240101000001_initial_schema.sql  20240101000002_indexes_optimization.sql  README.md
crates/storage/src/: backend.rs  cache.rs  error.rs  lib.rs  postgres.rs  query.rs  redis_cache.rs  s3.rs
docs/: API-LAYER-DELIVERY.md  API-QUICKSTART.md  BUILD_REPORT.md  CHANGE-MANAGEMENT.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  DEVOPS-DELIVERY-REPORT.md  FINAL-STATUS-REPORT.md  IMPLEMENTATION_COMPLETE.md  INCIDENT-RESPONSE.md  KUBERNETES.md  OBSERVABILITY.md  (+22 more)
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: basic_usage.py
sdks/python/schema_registry/: __init__.py  client.py  exceptions.py  models.py
sdks/rust/: Cargo.toml  IMPLEMENTATION-SUMMARY.md  README.md
sdks/rust/src/: cache.rs  client.rs  errors.rs  lib.rs  models.rs
tests/: Cargo.toml  security_tests.rs
tests/chaos/: README.md  database-failure.yaml  network-latency.yaml  network-partition.yaml  pod-failure.yaml  resource-stress.yaml
tests/e2e/: compatibility_workflow_tests.rs  error_handling_tests.rs  mod.rs  multi_version_tests.rs  schema_lifecycle_tests.rs  validation_workflow_tests.rs
tests/integration/: api_integration_tests.rs  database_tests.rs  mod.rs  multi_tier_storage_tests.rs  redis_tests.rs  s3_tests.rs  test_environment.rs
tests/load/: README.md  baseline_load.js  basic_load.js  soak_test.js  spike_test.js  stress_test.js
tests/property/: compatibility_properties.rs  mod.rs  schema_properties.rs  validation_properties.rs
(+150 files in other folders)
