[workspace]
members = [
    "crates/schema-registry-core",
    "crates/schema-registry-api",
    "crates/schema-registry-storage",
    "crates/schema-registry-validation",
    "crates/schema-registry-compatibility",
    "crates/schema-registry-security",
    "crates/schema-registry-observability",
    "crates/schema-registry-analytics",
    "crates/schema-registry-lineage",
    "crates/schema-registry-migration",
    "crates/schema-registry-cli",
    "crates/schema-registry-server",
    "crates/llm-integrations",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["LLM Schema Registry Team"]
license = "Apache-2.0"
repository = "https://github.com/llm-schema-registry/llm-schema-registry"

[workspace.dependencies]
# Internal crates
schema-registry-core = { path = "crates/schema-registry-core" }
schema-registry-api = { path = "crates/schema-registry-api" }
schema-registry-storage = { path = "crates/schema-registry-storage" }
schema-registry-validation = { path = "crates/schema-registry-validation" }
schema-registry-compatibility = { path = "crates/schema-registry-compatibility" }
schema-registry-security = { path = "crates/schema-registry-security" }
schema-registry-observability = { path = "crates/schema-registry-observability" }
schema-registry-analytics = { path = "crates/schema-registry-analytics" }
schema-registry-lineage = { path = "crates/schema-registry-lineage" }
schema-registry-migration = { path = "crates/schema-registry-migration" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# Web frameworks
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# gRPC
tonic = { version = "0.11", features = ["tls", "gzip"] }
tonic-build = "0.11"
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Schema formats
apache-avro = "0.16"
jsonschema = { version = "0.18", default-features = false }
schemars = "0.8"

# Database - PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
deadpool-postgres = "0.14"

# Database - Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "cluster", "streams"] }

# Cloud Storage - S3
aws-sdk-s3 = "1.13"
aws-config = "1.1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Identifiers
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Other utilities
url = { version = "2.5", features = ["serde"] }
bytes = "1.5"
regex = "1.10"
semver = { version = "1.0", features = ["serde"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"

# Metrics
metrics = "0.22"
prometheus = "0.13"

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
comfy-table = "7.1"
colored = "2.1"
indicatif = "0.17"

# Configuration
config = "0.14"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5.0"

# Concurrency
parking_lot = "0.12"
once_cell = "1.19"

# Testing
mockall = "0.12"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
