[package]
name = "llm-schema-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "gRPC and REST API definitions for the LLM Schema Registry"
keywords = ["api", "grpc", "rest", "schema-registry", "protobuf"]
categories = ["api-bindings", "web-programming::http-server"]
readme = "README.md"

[dependencies]
schema-registry-core = { workspace = true }
schema-registry-storage = { workspace = true }
schema-registry-validation = { workspace = true }
schema-registry-compatibility = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
