[package]
name = "schema-registry-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "schema-cli"
path = "src/main.rs"

[dependencies]
schema-registry-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
