[package]
name = "schema-registry-compatibility"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal
schema-registry-core = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Schema formats
apache-avro = { workspace = true }
jsonschema = { workspace = true }
prost = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true }
chrono = { workspace = true }
