[package]
name = "schema-registry-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
semver = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Schema formats
apache-avro = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }

# Cryptography
sha2 = { workspace = true }
hex = { workspace = true }

# Tracing
tracing = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
proptest = { workspace = true }
