[package]
name = "schema-registry-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Production-ready server for the LLM Schema Registry with gRPC and REST APIs"
keywords = ["server", "schema-registry", "grpc", "rest-api", "microservice"]
categories = ["web-programming::http-server", "development-tools"]
readme = "README.md"

[[bin]]
name = "schema-registry-server"
path = "src/main.rs"

[dependencies]
schema-registry-core = { workspace = true }
llm-schema-api = { workspace = true }
schema-registry-storage = { workspace = true }
schema-registry-validation = { workspace = true }
schema-registry-compatibility = { workspace = true }
schema-registry-security = { workspace = true }
schema-registry-observability = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
prometheus = { workspace = true }
async-trait = { workspace = true }
