[package]
name = "schema-registry-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
schema-registry-core = { path = "../core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# PostgreSQL
sqlx = { workspace = true }
deadpool-postgres = { workspace = true }

# Redis
redis = { workspace = true }

# S3
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

# Caching
moka = { workspace = true }

# Core types
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Metrics
metrics = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "storage_benchmarks"
harness = false
