[tool.poetry]
name = "llm-schema-registry-sdk"
version = "0.1.0"
description = "Python SDK for LLM Schema Registry"
authors = ["Schema Registry Team <team@example.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/llm-schema-registry/llm-schema-registry"
repository = "https://github.com/llm-schema-registry/llm-schema-registry"
keywords = ["schema", "registry", "llm", "validation", "compatibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "schema_registry"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
pydantic = "^2.5.0"
tenacity = "^8.2.3"
cachetools = "^5.3.2"
typing-extensions = "^4.9.0"
jsonschema = {version = "^4.20.0", optional = true}
avro = {version = "^1.11.3", optional = true}
protobuf = {version = "^4.25.1", optional = true}

[tool.poetry.extras]
json = ["jsonschema"]
avro = ["avro"]
protobuf = ["protobuf"]
all = ["jsonschema", "avro", "protobuf"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.9"
mypy = "^1.7.1"
respx = "^0.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=schema_registry --cov-report=term-missing --cov-report=html"
